bk_ida/gccida/c3/check_format_info_recurse
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/check_format_info_recurse/src/c-format.c:1846:1: error: unknown type name 'function_format_info_0'; did you mean 'function_format_info'?
function_format_info_0 *info, 
^~~~~~~~~~~~~~~~~~~~~~
function_format_info
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/check_format_info_recurse/src/c-format.c:85:3: note: 'function_format_info' declared here
} function_format_info;
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/check_format_info_recurse/src/c-format.c:1852:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *chain; // r13 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/check_format_info_recurse/src/c-format.c:1872:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v27; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/check_format_info_recurse/src/c-format.c:1880:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v35; // r14 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/check_format_info_recurse/src/c-format.c:1894:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v49; // rcx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/check_format_info_recurse/src/c-format.c:1918:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v73; // rcx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/check_format_info_recurse/src/c-format.c:1938:7: error: must use 'enum' tag to refer to type 'format_std_version'
const format_std_version *p_double_std; // rdx 
      ^
      enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/check_format_info_recurse/src/c-format.c:2025:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v180; // r14 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/check_format_info_recurse/src/c-format.c:2061:1: error: unknown type name 'function_format_info_0'; did you mean 'function_format_info'?
function_format_info_0 *v217; // [rsp+48h] [rbp-290h] 
^~~~~~~~~~~~~~~~~~~~~~
function_format_info
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/check_format_info_recurse/src/c-format.c:85:3: note: 'function_format_info' declared here
} function_format_info;
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/check_format_info_recurse/src/c-format.c:2219:20: error: expected expression
v27 = ( tree_node *)low; 
                   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/check_format_info_recurse/src/c-format.c:2219:9: error: use of undeclared identifier 'tree_node'
v27 = ( tree_node *)low; 
        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/check_format_info_recurse/src/c-format.c:2557:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[( unsigned __int8)v55] & 4) == 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/check_format_info_recurse/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/check_format_info_recurse/src/c-format.c:2573:11: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
while ( ( sch_istable[v55] & 4) != 0 ); 
          ^~~~~~~~~~~
          _sch_istable
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/check_format_info_recurse/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/check_format_info_recurse/src/c-format.c:2598:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[( unsigned __int8)v74[1]] & 4) != 0 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/check_format_info_recurse/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/check_format_info_recurse/src/c-format.c:2602:3: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
( sch_istable[( unsigned __int8)*format] & 4) != 0) ) 
  ^~~~~~~~~~~
  _sch_istable
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/check_format_info_recurse/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/check_format_info_recurse/src/c-format.c:2610:11: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
while ( ( sch_istable[v79] & 4) != 0 ); 
          ^~~~~~~~~~~
          _sch_istable
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/check_format_info_recurse/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/check_format_info_recurse/src/c-format.c:2694:15: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( v69 && ( sch_istable[( unsigned __int8)*v80] & 4) == 0 ) 
              ^~~~~~~~~~~
              _sch_istable
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/check_format_info_recurse/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/check_format_info_recurse/src/c-format.c:2700:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[( unsigned __int8)*v80] & 4) != 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/check_format_info_recurse/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/check_format_info_recurse/src/c-format.c:2708:11: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
while ( ( sch_istable[v87] & 4) != 0 ); 
          ^~~~~~~~~~~
          _sch_istable
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/check_format_info_recurse/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/check_format_info_recurse/src/obj/c-format.o] Error 1
